# trendfilter-py

./: .coverage 2  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  ci.yml
docs/: README.md  github-actions-update.md  wheel-building.md
examples/: basic_usage.py  generate_readme_plot.py
scripts/: build_wheels.sh  test_wheel.py
tests/: __init__.py  test_cv_trendfilter.py  test_trendfilter.py
trendfilter/: __init__.py  cv_trendfilter.py  trendfilter.py
trendfilter/src/: kf_utils.h  linearsystem.h  matrix_construction.cpp  matrix_multiplication.cpp
trendfilter_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
trendfilterpy/: __init__.py  trendfilter.py
trendfilterpy/src/: kf_utils.cpp  linearsystem.cpp
