[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.6.0",
    "numpy>=1.18.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "trendfilter"
version = "0.1.0"
description = "Python package for fast and flexible univariate trend filtering"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Jiaping Liu", email = "jiaping.liu@stat.ubc.ca"},
    {name = "Daniel J McDonald", email = "daniel@stat.ubc.ca"},
    {name = "Addison Hu", email = "mail@huisaddison.com"}
]
keywords = ["trend filtering", "signal processing", "signal denoising", "optimization", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.18.0",
    "scipy>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/jiapivialiu/trendfilter-py"
Repository = "https://github.com/jiapivialiu/trendfilter-py"
Documentation = "https://trendfilter.readthedocs.io"
"Bug Tracker" = "https://github.com/jiapivialiu/trendfilter-py/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["trendfilterpy*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=trendfilterpy --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
